# Dacon_FI-AI-Search-Algorithm

./: .gitignore  README.md  a.json  pyproject.toml
example/: AutoGPTQ_transformers.ipynb  Loading your LLM.ipynb  MarkDown_+ Ensemble Retriever + Llama-3.1-8B-It.ipynb  baseline_original.ipynb  baseline_public_62.ipynb  cal_eval_metric(f1-score).ipynb  pdf_loader_test.ipynb  test_csv_gpt4_answer.csv
result/: rag_raptor_gemma9b_prompt_submission.csv  rag_raptor_gemma9b_submission2_56.csv  rag_raptor_gemma9b_submission_59.csv  rag_raptor_llama8b_submission_37.csv  rtzr-ko-gemma-2-9b-it-4bit-financesinfo-ver1_multilingual-e5-large_pdf_loader_chks512_chkovp32_submission2_59.csv  rtzr-ko-gemma-2-9b-it-4bit-financesinfo-ver1_multilingual-e5-large_pdf_loader_chks512_chkovp32_submission3_57.csv  rtzr-ko-gemma-2-9b-it-4bit-financesinfo-ver1_multilingual-e5-large_pdf_loader_chks512_chkovp32_submission4_62.csv  rtzr-ko-gemma-2-9b-it-4bit-financesinfo-ver1_multilingual-e5-large_pdf_loader_chks512_chkovp32_submission_0.6.csv  upstage-SOLAR-10.7B-Instruct-v1.0-4bit-financesinfo-ver1_financial_analysis_submission_1.csv  upstage-SOLAR-10.7B-Instruct-v1.0-4bit-financesinfo-ver1_financial_analysis_submission_2.csv  upstage-SOLAR-10.7B-Instruct-v1.0-4bit-financesinfo-ver1_financial_analysis_submission_3.csv
src/: Meta-Llama-3.1-8B-Instruct_GPTQ.ipynb  RAG_RAPTOR_Ver1.ipynb  RAG_RAPTOR_Ver2.ipynb  RAG_RAPTOR_Ver2_59.ipynb  RAG_RAPTOR_Ver3_56.ipynb  RAG_RAPTOR_Ver4.ipynb  RAG_RAPTOR_Ver4_62.ipynb  Ver5.ipynb  Ver5_2_Langchain_EnsembleRetriever.ipynb  Ver5_3_EnsembleRetreiver_59.ipynb  (+6 more)
(+12 files in other folders)
